# xf

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  install.sh
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
benches/: search_perf.rs
docs/: architecture.md  development.md  performance.md  performance_baseline.md  troubleshooting.md
releases/v0.1.0/: SHA256SUMS.txt  SHA512SUMS.txt
scripts/: coverage.sh  generate_perf_corpus.py  verify_isomorphism.sh
src/: canonicalize.rs  cli.rs  config.rs  date_parser.rs  doctor.rs  embedder.rs  error.rs  hash_embedder.rs  hybrid.rs  lib.rs  logging.rs  main.rs  model.rs  parser.rs  perf.rs  repl.rs  search.rs  stats_analytics.rs  storage.rs  vector.rs
tests/: cli_e2e.rs  integration_test.rs
tests/e2e/: date_parse_test.sh  dm_context_test.sh  help_text_test.sh  performance_validation.sh  progress_feedback_test.sh  repl_test.sh  shell_cli_test.sh  stats_detailed_test.sh
tests/fixtures/: README.md
tests/fixtures/golden_outputs/: search_hybrid_rust.json  search_lexical_machine.json  stats_basic.txt  stats_detailed.json
tests/fixtures/perf_corpus/: corpus_manifest.json
tests/fixtures/perf_corpus/data/: direct-messages.js  grok-chat-item.js  grok-conversation-001.js  like.js  manifest.js
