[package]
name = "xf"
version = "0.1.0"
edition = "2024"
resolver = "2"
authors = ["Jeffrey Emanuel <jeff@jeffreyemanuel.dev>"]
description = "Ultra-fast CLI for searching and querying X data archives"
repository = "https://github.com/Dicklesworthstone/xf"
homepage = "https://github.com/Dicklesworthstone/xf"
license = "MIT"
keywords = ["twitter", "x", "search", "cli", "archive", "tantivy"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
rust-version = "1.85"
exclude = [
    ".github/",
    ".beads/",
    "scripts/",
    "*.md",
    "!README.md",
]

[[bin]]
name = "xf"
path = "src/main.rs"

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "signal"] }

# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
clap_complete = "4.5"

# Terminal output
colored = "2.1"
indicatif = "0.17"
console = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }

# Full-text search
tantivy = "0.22"

# High-performance text processing
regex = "1.10"
memchr = "2.7"
aho-corasick = "1.1"
unicode-normalization = "0.1"

# Parallelism
rayon = "1.10"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Utilities
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
dirs = "5.0"
walkdir = "2.5"
glob = "0.3"
once_cell = "1.19"
itertools = "0.13"
textwrap = "0.16"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

[build-dependencies]
vergen-gix = { version = "1.0", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_perf"
harness = false

[profile.release]
opt-level = "z"     # Optimize for size (lean binary for distribution)
lto = true          # Link-time optimization across crates
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary, no unwinding overhead
strip = true        # Remove debug symbols

[profile.dev]
opt-level = 1       # Faster compile times during development

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
